--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <h2 class="project-tagline">Converter for Java Class to Swift3.0 Class</h2>
       <a href="https://github.com/fancyang/Java2Swift-Class-Converter" class="btn">View on GitHub</a>
       <a href="https://github.com/BetaS/Java2Swift-Class-Converter" class="btn">View the Original example on GitHub</a>
+      <a  class="btn" href="https://fancyang.github.io/Swift2Java-Class-Converter">Swift3 -&gt; Java Class Converter</a>
+      <a  class="btn" href="https://fancyang.github.io/Java2Swift-Class-Converter">Java -&gt; Swift3 Class Converter</a>
+
     </section>
 
     <section class="main-content">
@@ -77,6 +80,7 @@ class Tester {
       <footer class="site-footer">
 
         <span class="site-footer-owner"><a href="https://github.com/BetaS/java2swift_object_converter">Java2swift object converter</a> is maintained by <a href="https://github.com/BetaS">BetaS</a>.</span>
+	<span class="site-footer-owner"><a href="https://github.com/fancyang/Swift2Java-Class-Converter">swift2Java class converter</a> is rewritten by <a href="https://github.com/fancyang">fancyang</a>.</span>
 
    	<span class="site-footer-owner"><a href="https://github.com/fancyang/java2swift_object_converter">Java2swift object converter</a> is rewritten by <a href="https://github.com/fancyang">fancyang</a>.</span>
 
